# sheer-audit

./: .gitignore  AGENTS.md  COMMANDS.txt  README.md  pyproject.toml  requirements_v2_0_3.folds  sheer.toml
.github/workflows/: ci.yml
docs/: BLUEPRINT.md  CODEX_REVIEW_CHECKLIST.md  CODEX_TASK_TEMPLATE.md
docs/adr/: 0001-template.md
docs/architecture/: README.md  architecture_principles.md  data_flow.md  execution_model.md  governance_layer.md  security_model.md  system_overview.md
docs/architecture/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  ADR-0008.md  ADR-0009.md  ADR-0010.md  ADR-0011.md  ADR-0012.md  ADR-0013.md  ADR-0014.md  ADR-0015.md  ADR-0016.md  ADR-0017.md  ADR-0018.md  ADR-0019.md  README.md
docs/atas/: 0001-template.md
docs/blueprints/: template.md
docs/chatgpt_codex/: README.md  codex_policy.md  workflow.md
docs/issues/: 0001-ci-quality-gates.md  0002-scan-domain-determinism.md  0003-governance-layer-from-reports.md
docs/reviews/: 2026-02-16-pysheer-audit-analise-tecnica.md
docs/sheer_audit/: ARCHITECTURE_ADVANCED.md  DC-002-Vigilancia-e-Persistencia.md  EVOLUTION_PLAN.md  IEEE_1016_Architecture.md  IEEE_1028_Audit.md  IEEE_829_TestPlan.md
src/sheer_audit/: __init__.py  cli.py  config.py
tests/: test_advanced_engine.py  test_axisfolds.py  test_cli_component_blueprint.py  test_cli_evolution.py  test_config.py  test_db_engine.py  test_forward_fix.py  test_governance_axisfolds.py  test_governance_planning.py  test_model_db_engine.py  test_scan_advanced.py  test_scan_repo.py
(+20 files in other folders)
