[project]
name = "sheer-audit"
version = "0.3.0"
description = "Sheer Audit - Sistema de análise de código Python"
requires-python = ">=3.10"
authors = [{name = "jrduães", email = "JRDUAES90@GMAIL.COM"}]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "toml>=0.10.2",
    "tomli>=2.0.1",
    "pyyaml>=6.0",
    "python-docx>=1.1",
    "pytest>=7.0"
]

[project.scripts]
sheer = "sheer_audit.cli:main"
ushel = "sheer_audit.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"